se agrego signo de pesos en los totales nivel 3

--- a/src/app/pages/costos-anuales/costos-anuales.component.html
+++ b/src/app/pages/costos-anuales/costos-anuales.component.html
@@ -623,60 +623,59 @@
                   summaryType="count">
               </dxi-group-item>
                     <!--ENERO [alignByColumn]="true"-->
-                    <dxi-group-item column="eneroReal" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
-                    <dxi-group-item column="eneroPresupuesto" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
-                    <dxi-group-item column="eneroDesviacion" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="eneroReal" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="eneroPresupuesto" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="eneroDesviacion" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
                     <!--FEBRERO-->
-                    <dxi-group-item column="febreroReal" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
-                    <dxi-group-item column="febreroPresupuesto" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
-                    <dxi-group-item column="febreroDesviacion" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="febreroReal" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="febreroPresupuesto" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="febreroDesviacion" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
                     <!--MARZO-->
-                    <dxi-group-item column="marzoReal" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
-                    <dxi-group-item column="marzoPresupuesto" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
-                    <dxi-group-item column="marzoDesviacion" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="marzoReal" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="marzoPresupuesto" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="marzoDesviacion" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
                     <!--ABRIL-->
-                    <dxi-group-item column="abrilReal" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
-                    <dxi-group-item column="abrilPresupuesto" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
-                    <dxi-group-item column="abrilDesviacion" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="abrilReal" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="abrilPresupuesto" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="abrilDesviacion" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
                     <!--MAYO-->
-                    <dxi-group-item column="mayoReal" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
-                    <dxi-group-item column="mayoPresupuesto" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
-                    <dxi-group-item column="mayoDesviacion" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="mayoReal" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="mayoPresupuesto" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="mayoDesviacion" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
                     <!--JUNIO-->
-                    <dxi-group-item column="junioReal" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
-                    <dxi-group-item column="junioPresupuesto" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
-                    <dxi-group-item column="junioDesviacion" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="junioReal" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="junioPresupuesto" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="junioDesviacion" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
                     <!--JULIO-->
-                    <dxi-group-item column="julioReal" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
-                    <dxi-group-item column="julioPresupuesto" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
-                    <dxi-group-item column="julioDesviacion" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="julioReal" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="julioPresupuesto" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="julioDesviacion" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
                     <!--AGOSTO-->
-                    <dxi-group-item column="agostoReal" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
-                    <dxi-group-item column="agostoPresupuesto" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
-                    <dxi-group-item column="agostoDesviacion" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="agostoReal" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="agostoPresupuesto" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="agostoDesviacion" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
                     <!--SEPTIEMBRE-->
-                    <dxi-group-item column="septiembreReal" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
-                    <dxi-group-item column="septiembrePresupuesto" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
-                    <dxi-group-item column="septiembreDesviacion" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="septiembreReal" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="septiembrePresupuesto" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="septiembreDesviacion" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
                     <!--OCTUBRE-->
-                    <dxi-group-item column="octubreReal" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
-                    <dxi-group-item column="octubrePresupuesto" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
-                    <dxi-group-item column="octubreDesviacion" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="octubreReal" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="octubrePresupuesto" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="octubreDesviacion" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
                     <!--NOMVIEMBRE-->
-                    <dxi-group-item column="noviembreReal" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
-                    <dxi-group-item column="noviembrePresupuesto" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
-                    <dxi-group-item column="noviembreDesviacion" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="noviembreReal" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="noviembrePresupuesto" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="noviembreDesviacion" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
                     <!--DICIEMBRE-->
-                    <dxi-group-item column="diciembreReal" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
-                    <dxi-group-item column="diciembrePresupuesto" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
-                    <dxi-group-item column="diciembreDesviacion" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="diciembreReal" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="diciembrePresupuesto" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="diciembreDesviacion" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
                     <!--ACUMULADO-->
-                    <dxi-group-item column="acumuladoReal" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
-                    <dxi-group-item column="acumuladoPresupuesto" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
-                    <dxi-group-item column="acumuladoDesviacion" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="true"></dxi-group-item>
-                    <dxi-group-item showInColumn="cuenta"column="cuenta" summaryType="sum" displayFormat="-" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
-                    </dxi-group-item>
-                    
+                    <dxi-group-item column="acumuladoReal" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="acumuladoPresupuesto" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="acumuladoDesviacion" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item showInColumn="cuenta"column="cuenta" summaryType="sum" displayFormat="SUBTOTAL" valueFormat="currency" [showInGroupFooter]="true">
+                    </dxi-group-item> 
                     <!-- PORCENTAJES GRUPO -->
                     <!--ENERO-->
                     <dxi-group-item showInColumn="eneroPorDesv" name="grupEneroPorDesv" summaryType="custom" displayFormat="{0}" valueFormat="percent" [showInGroupFooter]="true"></dxi-group-item>
